sandbox/output
Patient.java:47: error: cannot find symbol
        LocalDate endAA = getEndDate(medicine);
                          ^
  symbol:   method getEndDate(Medicine)
  location: class Patient
Patient.java:54: error: cannot find symbol
        LocalDate endBB = getEndDate(clashingMedicine);
                          ^
  symbol:   method getEndDate(Medicine)
  location: class Patient
2 errors
